<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">InvenApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="iniciar">Iniciar Sesión</string>
    <string name="log1">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="copy">InvenApp© es una marca registrada de RandomS.A. 
diseñada y desarrollada en Ecuador por RandomS.A.
sugerencias y contacto a hola@invenapp.com </string>
<string name="usuario2">Usuario</string>
<string name="contrasena2">contraseña</string>
<string name="ingresos">Ingreso</string>
<string name="salidas">Salida</string>
<string name="modificacion">Modificacion</string>
<string name="eliminar">Eliminar</string>
<string name="Estadisticas">Estadisticas</string>
<string name="sugerencias">Sugerencias</string>
<string name="bienvenido">¡Bienvenido!</string>
<string name="instruccion">A continuación ingresarás tus articulos al inventario. Recuerda que la información debe ser exacta y lo más detallada posible.</string>
<string name="codigo">Codigo</string>
<string name="producto">Producto</string>
<string name="descripcion">Descripcion</string>
<string name="tipo">Tipo - Categoria</string>
<string name="cantidad1">Cantidad Ingresan</string>
<string name="cantidad2">Cantidad Salen</string>
<string name="ordencompra">Orden de Compra</string>
<string name="salida22">¡Atención!</string>
<string name="factura">Numero de Factura</string>
<string name="instruccionsalida">A continuación eliminarás artículos de inventario. Recuerda determinar si salen por ventas o por baja.</string>
<string name="sugiere">
Se sugiere agregar para el 3 de agosto los siguientes productos:</string>
<string name="suge">Esas sugerencias son el resultado del ingreso, egreso y
eliminación de productos que usted ha realizado.
si usted NO ha utilizado esta aplicación regularmente
le aconsejamos no seguir las sugerencias.</string>
<string name="explicacion">Para empezar a utilizar InvenApp microempresas, debes registrarte, esto nos ayudará a mejorar la aplicación y brindarte un mejor servicio.</string>
<string name="nomusuario1">Nombre de usuario</string>
<string name="nomempresa">Nombre de Empresa</string>
<string name="correo">Correo</string>
<string name="Actividad">Nombre de usuario</string>
<string name="ruc">ruc</string>
<string name="country_prompt">Selecciona Actividad</string>
<string-array name="country_arrays">
        <item>Servicios Computacionales</item>
        <item>Repuestos</item>
        <item>Retail</item>
        <item>Ropa</item>
        <item>Fabrica</item>
        <item>Taller</item>
</string-array>
<string name="acepto">Acepto los términos y condiciones.</string>
<string name="registrarme">Registrarme!</string>
<string name="masvendidos">Productos con más salida</string>
<string name="menosvendidos">Productos con menos rotación.</string>
</resources>
