<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent" >

	<TextView
		android:id="@+id/textView2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="16dp"
		android:text="@string/bienvenido" />

	<TextView
		android:id="@+id/textView1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_below="@+id/textView2"
		android:layout_marginTop="21dp"
		android:gravity="center"
		android:text="@string/instruccion" />

	<EditText
		android:id="@+id/codigo"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/textView1"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="18dp"
		android:ems="10"
		android:hint="@string/codigo" />

	<EditText
		android:id="@+id/producto"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/codigo"
		android:layout_centerHorizontal="true"
		android:ems="10"
		android:hint="@string/producto" />

	<EditText
		android:id="@+id/descripcion"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/producto"
		android:layout_centerHorizontal="true"
		android:ems="10"
		android:hint="@string/descripcion" />

	<EditText
		android:id="@+id/tipo"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/descripcion"
		android:layout_centerHorizontal="true"
		android:ems="10"
		android:hint="@string/tipo" />

	<EditText
		android:id="@+id/cantidad"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/tipo"
		android:layout_centerHorizontal="true"
		android:ems="10"
		android:hint="@string/cantidad1" />

	<EditText
		android:id="@+id/Ordencompra"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/cantidad"
		android:layout_centerHorizontal="true"
		android:ems="10"
		android:hint="@string/ordencompra" />

	<Button
		android:id="@+id/guardar"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/Ordencompra"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="16dp"
		android:onClick="goToListado"
		android:text="Guardar" />

</RelativeLayout>