<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/fondograndiente"
	android:orientation="vertical" >

	<EditText
		android:id="@+id/usuario"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/textView1"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="18dp"
		android:ems="10"
		android:text="@string/usuario2" />

	<EditText
		android:id="@+id/contrasena"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/usuario"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="23dp"
		android:ems="10"
		android:inputType="textPassword"
		android:text="@string/contrasena2" >

		<requestFocus />
	</EditText>

	<Button
		android:id="@+id/login"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/contrasena"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="34dp"
		android:text="@string/log1" />

	<TextView
		android:id="@+id/textView1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="54dp"
		android:text="@string/iniciar"
		android:textColor="#ffffff"
		android:textSize="25sp" />

	<TextView
		android:id="@+id/registrarse"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/login"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="16dp"
		android:onClick="goToRegister"
		android:text="@string/registrarse" />

	<TextView
		android:id="@+id/textView2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_alignParentLeft="true"
		android:layout_marginBottom="5dp"
		android:gravity="center"
		android:text="@string/copy"
        android:textColor="#f9ffff"
        android:textSize="12sp" />

</RelativeLayout>