<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="18dp"
        android:text="@string/explicacion" />

    <EditText
        android:id="@+id/nomusuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:text="@string/nomusuario1" >
   
    </EditText>

    <EditText
        android:id="@+id/nomempresa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nomusuario"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:text="@string/nomempresa" />

    <EditText
        android:id="@+id/correo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nomempresa"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/correo" />

        <requestFocus />

        <Spinner
            android:id="@+id/actividad1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/correo"
            android:entries="@array/country_arrays"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:prompt="@string/country_prompt" />
         <Spinner
            android:id="@+id/actividad2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/contrasena"
            android:layout_alignParentLeft="true" />

        <EditText
            android:id="@+id/contrasena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/actividad1"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:inputType="textPassword" 
            android:text="@string/contrasena2"/>

        <EditText
            android:id="@+id/repitecontrasena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/correo"
            android:layout_below="@+id/contrasena"
            android:ems="10"
            android:inputType="textPassword"
            android:text="@string/contrasena2" />

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView1"
            android:layout_below="@+id/repitecontrasena"
            android:layout_marginTop="18dp"
            android:text="@string/acepto" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkBox1"
            android:layout_centerHorizontal="true"
            android:text="@string/registrarme" />

       

</RelativeLayout>
